// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eslint Package transformer should work with child packages 1`] = `
Object {
  "devDependencies": Object {
    "eslint": "^8.16.0",
    "eslint-plugin-prettier": "^4.0.0",
    "prettier": "^2.6.2",
  },
  "eslintConfig": Object {
    "env": Object {
      "es6": true,
      "jest": true,
      "mocha": true,
      "node": true,
    },
    "extends": Array [
      "eslint:recommended",
    ],
    "parserOptions": Object {
      "ecmaVersion": 2018,
      "modules": true,
      "sourceType": "script",
    },
    "plugins": Array [
      "prettier",
    ],
    "rules": Object {
      "prettier/prettier": "error",
    },
  },
  "metapak": Object {
    "data": Object {
      "childPackage": true,
      "files": "src/*.js src/**/*.js",
    },
  },
  "prettier": Object {
    "printWidth": 80,
    "proseWrap": "always",
    "semi": true,
    "singleQuote": true,
    "trailingComma": "es5",
  },
  "scripts": Object {
    "lint": "eslint src/*.js src/**/*.js",
    "prettier": "prettier --write src/*.js src/**/*.js",
  },
}
`;

exports[`eslint Package transformer should work with some files 1`] = `
Object {
  "devDependencies": Object {
    "eslint": "^8.16.0",
    "eslint-plugin-prettier": "^4.0.0",
    "prettier": "^2.6.2",
  },
  "eslintConfig": Object {
    "env": Object {
      "es6": true,
      "jest": true,
      "mocha": true,
      "node": true,
    },
    "extends": Array [
      "eslint:recommended",
    ],
    "parserOptions": Object {
      "ecmaVersion": 2018,
      "modules": true,
      "sourceType": "script",
    },
    "plugins": Array [
      "prettier",
    ],
    "rules": Object {
      "prettier/prettier": "error",
    },
  },
  "greenkeeper": Object {
    "ignore": Array [
      "eslint",
      "eslint-config-prettier",
      "prettier",
    ],
  },
  "metapak": Object {
    "data": Object {
      "files": "src/*.js src/**/*.js",
    },
  },
  "prettier": Object {
    "printWidth": 80,
    "proseWrap": "always",
    "semi": true,
    "singleQuote": true,
    "trailingComma": "es5",
  },
  "scripts": Object {
    "lint": "eslint src/*.js src/**/*.js",
    "prettier": "prettier --write src/*.js src/**/*.js",
  },
}
`;

exports[`eslint Package transformer should work with typescript configs 1`] = `
Object {
  "devDependencies": Object {
    "@typescript-eslint/eslint-plugin": "^5.26.0",
    "@typescript-eslint/parser": "^5.26.0",
    "eslint": "^8.16.0",
    "eslint-plugin-prettier": "^4.0.0",
    "prettier": "^2.6.2",
  },
  "eslintConfig": Object {
    "env": Object {
      "es6": true,
      "jest": true,
      "mocha": true,
      "node": true,
    },
    "extends": Array [
      "eslint:recommended",
      "plugin:@typescript-eslint/eslint-recommended",
      "plugin:@typescript-eslint/recommended",
    ],
    "ignorePatterns": Array [
      "*.d.ts",
    ],
    "parser": "@typescript-eslint/parser",
    "parserOptions": Object {
      "ecmaVersion": 2018,
      "modules": true,
      "sourceType": "script",
    },
    "plugins": Array [
      "prettier",
    ],
    "rules": Object {
      "prettier/prettier": "error",
    },
  },
  "metapak": Object {
    "configs": Array [
      "typescript",
    ],
    "data": Object {
      "childPackage": true,
      "files": "src/*.js src/**/*.js",
    },
  },
  "prettier": Object {
    "printWidth": 80,
    "proseWrap": "always",
    "semi": true,
    "singleQuote": true,
    "trailingComma": "es5",
  },
  "scripts": Object {
    "lint": "eslint src/*.js src/**/*.js",
    "prettier": "prettier --write src/*.js src/**/*.js",
  },
}
`;
